force-app/main/default/objects/Placement_Feedback__c/Placement_Feedback__c.object-meta.xml
<CustomObject>
    <label>Placement Feedback</label>
    <nameField>
        <displayFormat>PF-{00000}</displayFormat>
        <label>Placement Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>