force-app/main/default/objects/Placement_Feedback__c/fields/Feedback_By__c.field-meta.xml
<CustomField>
    <fullName>Feedback_By__c</fullName>
    <label>Feedback By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>